--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - lib/images/et.png
+    - lib/images/test.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
